<resources>
    <string name="app_name">TaskLooper</string>

    <string name="save">Save</string>
    <string name="create_a_new_task">Create a New Task</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="edit_a_task">Edit a Task</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>